// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image default 1`] = `
<div
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
             0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "maxWidth": 332,
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <div
      style={
        Object {
          "muiPrepared": true,
          "padding": 8,
          "position": "relative",
        }
      }
    >
      <div
        className={undefined}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                   0 1px 4px rgba(0, 0, 0, 0.12)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "marginRight": 8,
            "minWidth": 88,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "#00bcd4",
              "border": 10,
              "borderRadius": 2,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 36,
              "lineHeight": "36px",
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": "100%",
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "backgroundColor": false,
                  "borderRadius": 2,
                  "height": 36,
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": 500,
                    "letterSpacing": 0,
                    "margin": 0,
                    "muiPrepared": true,
                    "opacity": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "position": "relative",
                    "textTransform": "uppercase",
                    "userSelect": "none",
                  }
                }
              >
                Select Image
              </span>
            </div>
          </div>
        </button>
      </div>
      <button
        disabled={true}
        href={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.3)",
            "cursor": "default",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "marginRight": 0,
            "minWidth": 88,
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={-1}
        type="button"
      >
        <span
          style={
            Object {
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "muiPrepared": true,
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "relative",
              "textTransform": "uppercase",
              "verticalAlign": "middle",
            }
          }
        >
          Reset
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image failed 1`] = `
<div
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
             0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "maxWidth": 332,
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <div
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontSize": 14,
          "maxHeight": 310,
          "muiPrepared": true,
          "padding": 16,
          "paddingBottom": 0,
        }
      }
    >
      <div
        className=""
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid #ededed",
            "borderRadius": 2,
            "boxSizing": "border-box",
            "maxHeight": 300,
            "maxWidth": 298,
          }
        }
      >
        <input
          accept="image/*"
          multiple={false}
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
      </div>
      <div
        style={
          Object {
            "muiPrepared": true,
          }
        }
        value={1}
      >
        <div
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "cursor": "default",
              "height": 18,
              "margin": "5px 0",
              "marginBottom": 48,
              "marginTop": 24,
              "muiPrepared": true,
              "position": "relative",
              "touchCallout": "none",
              "userSelect": "none",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "height": 2,
                "left": 0,
                "muiPrepared": true,
                "position": "absolute",
                "top": 8,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "[object Object]": 0,
                  "backgroundColor": "#00bcd4",
                  "directionInvariant": true,
                  "height": "100%",
                  "left": 0,
                  "marginRight": 6,
                  "muiPrepared": true,
                  "position": "absolute",
                  "transition": "margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "calc(0%)",
                }
              }
            />
            <div
              style={
                Object {
                  "[object Object]": 0,
                  "backgroundColor": "#bdbdbd",
                  "directionInvariant": true,
                  "height": "100%",
                  "marginLeft": 6,
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "transition": "margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "calc(100%)",
                }
              }
            />
            <div
              style={
                Object {
                  "backgroundClip": "padding-box",
                  "backgroundColor": "#ffffff",
                  "border": "2px solid #bdbdbd",
                  "borderRadius": "50%",
                  "boxShadow": "none",
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "directionInvariant": true,
                  "height": 12,
                  "left": "0%",
                  "margin": "1px 0 0 0",
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "pointerEvents": "inherit",
                  "position": "absolute",
                  "top": 0,
                  "transform": "translate(-50%, -50%)",
                  "transition": "background 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, border-color 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, width 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, height 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": 12,
                  "zIndex": 1,
                }
              }
              tabIndex={0}
            >
              <div
                style={
                  Object {
                    "height": 12,
                    "left": -2,
                    "muiPrepared": true,
                    "overflow": "visible",
                    "position": "absolute",
                    "top": -2,
                    "width": 12,
                  }
                }
              />
            </div>
          </div>
        </div>
        <input
          max={2}
          min={1}
          name={undefined}
          required={true}
          step={0.01}
          type="hidden"
          value={1}
        />
      </div>
    </div>
    <div
      style={
        Object {
          "muiPrepared": true,
          "padding": 8,
          "position": "relative",
        }
      }
    >
      <div
        className={undefined}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                   0 1px 4px rgba(0, 0, 0, 0.12)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "marginRight": 8,
            "minWidth": 88,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "#ff4081",
              "border": 10,
              "borderRadius": 2,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 36,
              "lineHeight": "36px",
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": "100%",
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "backgroundColor": false,
                  "borderRadius": 2,
                  "height": 36,
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": 500,
                    "letterSpacing": 0,
                    "margin": 0,
                    "muiPrepared": true,
                    "opacity": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "position": "relative",
                    "textTransform": "uppercase",
                    "userSelect": "none",
                  }
                }
              >
                Retry
              </span>
            </div>
          </div>
        </button>
      </div>
      <div
        className={undefined}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                   0 1px 4px rgba(0, 0, 0, 0.12)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "marginRight": 8,
            "minWidth": 88,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "#00bcd4",
              "border": 10,
              "borderRadius": 2,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 36,
              "lineHeight": "36px",
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": "100%",
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "backgroundColor": false,
                  "borderRadius": 2,
                  "height": 36,
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": 500,
                    "letterSpacing": 0,
                    "margin": 0,
                    "muiPrepared": true,
                    "opacity": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "position": "relative",
                    "textTransform": "uppercase",
                    "userSelect": "none",
                  }
                }
              >
                Change
              </span>
            </div>
          </div>
        </button>
      </div>
      <button
        disabled={false}
        href={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "marginRight": 0,
            "minWidth": 88,
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={0}
        type="button"
      >
        <div
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <span
            style={
              Object {
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "muiPrepared": true,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "verticalAlign": "middle",
              }
            }
          >
            Reset
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image uploaded 1`] = `
<div
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
             0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "maxWidth": 332,
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <div
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontSize": 14,
          "muiPrepared": true,
          "padding": 16,
        }
      }
    />
    <div
      style={
        Object {
          "muiPrepared": true,
          "padding": 8,
          "position": "relative",
        }
      }
    >
      <div
        className={undefined}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                   0 1px 4px rgba(0, 0, 0, 0.12)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "marginRight": 8,
            "minWidth": 88,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "#00bcd4",
              "border": 10,
              "borderRadius": 2,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 36,
              "lineHeight": "36px",
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": "100%",
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "backgroundColor": false,
                  "borderRadius": 2,
                  "height": 36,
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": 500,
                    "letterSpacing": 0,
                    "margin": 0,
                    "muiPrepared": true,
                    "opacity": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "position": "relative",
                    "textTransform": "uppercase",
                    "userSelect": "none",
                  }
                }
              >
                Change
              </span>
            </div>
          </div>
        </button>
      </div>
      <button
        disabled={false}
        href={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "marginRight": 0,
            "minWidth": 88,
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={0}
        type="button"
      >
        <div
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <span
            style={
              Object {
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "muiPrepared": true,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "verticalAlign": "middle",
              }
            }
          >
            Reset
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image uploading 1`] = `
<div
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
             0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "maxWidth": 332,
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <div
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontSize": 14,
          "maxHeight": 310,
          "muiPrepared": true,
          "padding": 16,
          "paddingBottom": 0,
        }
      }
    >
      <div
        className=""
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid #ededed",
            "borderRadius": 2,
            "boxSizing": "border-box",
            "maxHeight": 300,
            "maxWidth": 298,
          }
        }
      >
        <input
          accept="image/*"
          multiple={false}
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
      </div>
      <div
        style={
          Object {
            "muiPrepared": true,
          }
        }
        value={1}
      >
        <div
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "cursor": "default",
              "height": 18,
              "margin": "5px 0",
              "marginBottom": 48,
              "marginTop": 24,
              "muiPrepared": true,
              "position": "relative",
              "touchCallout": "none",
              "userSelect": "none",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "height": 2,
                "left": 0,
                "muiPrepared": true,
                "position": "absolute",
                "top": 8,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "[object Object]": 0,
                  "backgroundColor": "#00bcd4",
                  "directionInvariant": true,
                  "height": "100%",
                  "left": 0,
                  "marginRight": 6,
                  "muiPrepared": true,
                  "position": "absolute",
                  "transition": "margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "calc(0%)",
                }
              }
            />
            <div
              style={
                Object {
                  "[object Object]": 0,
                  "backgroundColor": "#bdbdbd",
                  "directionInvariant": true,
                  "height": "100%",
                  "marginLeft": 6,
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "transition": "margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "calc(100%)",
                }
              }
            />
            <div
              style={
                Object {
                  "backgroundClip": "padding-box",
                  "backgroundColor": "#ffffff",
                  "border": "2px solid #bdbdbd",
                  "borderRadius": "50%",
                  "boxShadow": "none",
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "directionInvariant": true,
                  "height": 12,
                  "left": "0%",
                  "margin": "1px 0 0 0",
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "pointerEvents": "inherit",
                  "position": "absolute",
                  "top": 0,
                  "transform": "translate(-50%, -50%)",
                  "transition": "background 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, border-color 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, width 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, height 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": 12,
                  "zIndex": 1,
                }
              }
              tabIndex={0}
            >
              <div
                style={
                  Object {
                    "height": 12,
                    "left": -2,
                    "muiPrepared": true,
                    "overflow": "visible",
                    "position": "absolute",
                    "top": -2,
                    "width": 12,
                  }
                }
              />
            </div>
          </div>
        </div>
        <input
          max={2}
          min={1}
          name={undefined}
          required={true}
          step={0.01}
          type="hidden"
          value={1}
        />
      </div>
    </div>
    <div
      style={
        Object {
          "muiPrepared": true,
          "padding": 8,
          "position": "relative",
        }
      }
    >
      <div
        className={undefined}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "marginRight": 8,
            "minWidth": 88,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={true}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "rgb(229, 229, 229)",
              "border": 10,
              "borderRadius": 2,
              "boxSizing": "border-box",
              "cursor": "default",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 36,
              "lineHeight": "36px",
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": "100%",
              "zIndex": 1,
            }
          }
          tabIndex={-1}
          type="button"
        >
          <div
            style={
              Object {
                "backgroundColor": false,
                "borderRadius": 2,
                "height": 36,
                "muiPrepared": true,
                "top": 0,
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              }
            }
          >
            <span
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.3)",
                  "fontSize": 14,
                  "fontWeight": 500,
                  "letterSpacing": 0,
                  "margin": 0,
                  "muiPrepared": true,
                  "opacity": 1,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "position": "relative",
                  "textTransform": "uppercase",
                  "userSelect": "none",
                }
              }
            >
              Upload
            </span>
          </div>
        </button>
      </div>
      <div
        className={undefined}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                   0 1px 4px rgba(0, 0, 0, 0.12)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "marginRight": 8,
            "minWidth": 88,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "#00bcd4",
              "border": 10,
              "borderRadius": 2,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 36,
              "lineHeight": "36px",
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": "100%",
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "backgroundColor": false,
                  "borderRadius": 2,
                  "height": 36,
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": 500,
                    "letterSpacing": 0,
                    "margin": 0,
                    "muiPrepared": true,
                    "opacity": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "position": "relative",
                    "textTransform": "uppercase",
                    "userSelect": "none",
                  }
                }
              >
                Change
              </span>
            </div>
          </div>
        </button>
      </div>
      <button
        disabled={false}
        href={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "marginRight": 0,
            "minWidth": 88,
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={0}
        type="button"
      >
        <div
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <span
            style={
              Object {
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "muiPrepared": true,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "verticalAlign": "middle",
              }
            }
          >
            Reset
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image with image 1`] = `
<div
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
             0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "maxWidth": 332,
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <div
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontSize": 14,
          "maxHeight": 310,
          "muiPrepared": true,
          "padding": 16,
          "paddingBottom": 0,
        }
      }
    >
      <div
        className=""
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={
          Object {
            "border": "1px solid #ededed",
            "borderRadius": 2,
            "boxSizing": "border-box",
            "maxHeight": 300,
            "maxWidth": 298,
          }
        }
      >
        <input
          accept="image/*"
          multiple={false}
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
      </div>
      <div
        style={
          Object {
            "muiPrepared": true,
          }
        }
        value={1}
      >
        <div
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "cursor": "default",
              "height": 18,
              "margin": "5px 0",
              "marginBottom": 48,
              "marginTop": 24,
              "muiPrepared": true,
              "position": "relative",
              "touchCallout": "none",
              "userSelect": "none",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "height": 2,
                "left": 0,
                "muiPrepared": true,
                "position": "absolute",
                "top": 8,
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "[object Object]": 0,
                  "backgroundColor": "#00bcd4",
                  "directionInvariant": true,
                  "height": "100%",
                  "left": 0,
                  "marginRight": 6,
                  "muiPrepared": true,
                  "position": "absolute",
                  "transition": "margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "calc(0%)",
                }
              }
            />
            <div
              style={
                Object {
                  "[object Object]": 0,
                  "backgroundColor": "#bdbdbd",
                  "directionInvariant": true,
                  "height": "100%",
                  "marginLeft": 6,
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "transition": "margin 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "calc(100%)",
                }
              }
            />
            <div
              style={
                Object {
                  "backgroundClip": "padding-box",
                  "backgroundColor": "#ffffff",
                  "border": "2px solid #bdbdbd",
                  "borderRadius": "50%",
                  "boxShadow": "none",
                  "boxSizing": "border-box",
                  "cursor": "pointer",
                  "directionInvariant": true,
                  "height": 12,
                  "left": "0%",
                  "margin": "1px 0 0 0",
                  "muiPrepared": true,
                  "outline": "none",
                  "overflow": "visible",
                  "pointerEvents": "inherit",
                  "position": "absolute",
                  "top": 0,
                  "transform": "translate(-50%, -50%)",
                  "transition": "background 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, border-color 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, width 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, height 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": 12,
                  "zIndex": 1,
                }
              }
              tabIndex={0}
            >
              <div
                style={
                  Object {
                    "height": 12,
                    "left": -2,
                    "muiPrepared": true,
                    "overflow": "visible",
                    "position": "absolute",
                    "top": -2,
                    "width": 12,
                  }
                }
              />
            </div>
          </div>
        </div>
        <input
          max={2}
          min={1}
          name={undefined}
          required={true}
          step={0.01}
          type="hidden"
          value={1}
        />
      </div>
    </div>
    <div
      style={
        Object {
          "muiPrepared": true,
          "padding": 8,
          "position": "relative",
        }
      }
    >
      <div
        className={undefined}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                   0 1px 4px rgba(0, 0, 0, 0.12)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "marginRight": 8,
            "minWidth": 88,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "#ff4081",
              "border": 10,
              "borderRadius": 2,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 36,
              "lineHeight": "36px",
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": "100%",
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "backgroundColor": false,
                  "borderRadius": 2,
                  "height": 36,
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": 500,
                    "letterSpacing": 0,
                    "margin": 0,
                    "muiPrepared": true,
                    "opacity": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "position": "relative",
                    "textTransform": "uppercase",
                    "userSelect": "none",
                  }
                }
              >
                Upload
              </span>
            </div>
          </div>
        </button>
      </div>
      <div
        className={undefined}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#ffffff",
            "borderRadius": 2,
            "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                   0 1px 4px rgba(0, 0, 0, 0.12)",
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "marginRight": 8,
            "minWidth": 88,
            "muiPrepared": true,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "#00bcd4",
              "border": 10,
              "borderRadius": 2,
              "boxSizing": "border-box",
              "cursor": "pointer",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 36,
              "lineHeight": "36px",
              "margin": 0,
              "muiPrepared": true,
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "verticalAlign": null,
              "width": "100%",
              "zIndex": 1,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              style={
                Object {
                  "backgroundColor": false,
                  "borderRadius": 2,
                  "height": 36,
                  "muiPrepared": true,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": 500,
                    "letterSpacing": 0,
                    "margin": 0,
                    "muiPrepared": true,
                    "opacity": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "position": "relative",
                    "textTransform": "uppercase",
                    "userSelect": "none",
                  }
                }
              >
                Change
              </span>
            </div>
          </div>
        </button>
      </div>
      <button
        disabled={false}
        href={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "marginRight": 0,
            "minWidth": 88,
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={0}
        type="button"
      >
        <div
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <span
            style={
              Object {
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "muiPrepared": true,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "verticalAlign": "middle",
              }
            }
          >
            Reset
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots RenderCounter multi-level 1`] = `
<div
  style={
    Object {
      "border": "solid 1px grey",
      "display": "inline-block",
      "padding": 5,
    }
  }
>
  <button
    onClick={[Function]}
  >
    btn1
    <div
      style={
        Object {
          "backgroundColor": "#f95",
          "borderRadius": "8px",
          "color": "white",
          "display": "inline-block",
          "float": "right",
          "fontSize": "8pt",
          "fontWeight": "bold",
          "padding": "1px 5px",
          "textAlign": "center",
          "top": "2px",
        }
      }
    >
      1
    </div>
  </button>
  <div
    style={
      Object {
        "border": "solid 1px grey",
        "display": "inline-block",
        "padding": 5,
      }
    }
  >
    <button
      onClick={[Function]}
    >
      btn2
      <div
        style={
          Object {
            "backgroundColor": "#f95",
            "borderRadius": "8px",
            "color": "white",
            "display": "inline-block",
            "float": "right",
            "fontSize": "8pt",
            "fontWeight": "bold",
            "padding": "1px 5px",
            "textAlign": "center",
            "top": "2px",
          }
        }
      >
        1
      </div>
    </button>
    <div
      style={
        Object {
          "border": "solid 1px grey",
          "display": "inline-block",
          "padding": 5,
        }
      }
    >
      <button
        onClick={[Function]}
      >
        btn3
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots RenderCounter nested 1`] = `
<div>
  <div
    style={
      Object {
        "border": "solid 1px grey",
        "display": "inline-block",
        "padding": 5,
      }
    }
  >
    <button
      onClick={[Function]}
    >
      clone-child-btn1
      <div
        style={
          Object {
            "backgroundColor": "#f95",
            "borderRadius": "8px",
            "color": "white",
            "display": "inline-block",
            "float": "right",
            "fontSize": "8pt",
            "fontWeight": "bold",
            "padding": "1px 5px",
            "textAlign": "center",
            "top": "2px",
          }
        }
      >
        1
      </div>
    </button>
    <div
      style={
        Object {
          "border": "solid 1px grey",
          "display": "inline-block",
          "padding": 5,
        }
      }
    >
      <button
        onClick={[Function]}
      >
        btn2
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
      </button>
      <div
        style={
          Object {
            "border": "solid 1px grey",
            "display": "inline-block",
            "padding": 5,
          }
        }
      >
        <button
          onClick={[Function]}
        >
          btn3
          <div
            style={
              Object {
                "backgroundColor": "#f95",
                "borderRadius": "8px",
                "color": "white",
                "display": "inline-block",
                "float": "right",
                "fontSize": "8pt",
                "fontWeight": "bold",
                "padding": "1px 5px",
                "textAlign": "center",
                "top": "2px",
              }
            }
          >
            1
          </div>
        </button>
      </div>
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "border": "solid 1px grey",
        "display": "inline-block",
        "padding": 5,
      }
    }
  >
    <button
      onClick={[Function]}
    >
      btn1
      <div
        style={
          Object {
            "backgroundColor": "#f95",
            "borderRadius": "8px",
            "color": "white",
            "display": "inline-block",
            "float": "right",
            "fontSize": "8pt",
            "fontWeight": "bold",
            "padding": "1px 5px",
            "textAlign": "center",
            "top": "2px",
          }
        }
      >
        1
      </div>
    </button>
    <div
      style={
        Object {
          "border": "solid 1px grey",
          "display": "inline-block",
          "padding": 5,
        }
      }
    >
      <button
        onClick={[Function]}
      >
        clone-child-btn2
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
      </button>
      <div
        style={
          Object {
            "border": "solid 1px grey",
            "display": "inline-block",
            "padding": 5,
          }
        }
      >
        <button
          onClick={[Function]}
        >
          btn3
          <div
            style={
              Object {
                "backgroundColor": "#f95",
                "borderRadius": "8px",
                "color": "white",
                "display": "inline-block",
                "float": "right",
                "fontSize": "8pt",
                "fontWeight": "bold",
                "padding": "1px 5px",
                "textAlign": "center",
                "top": "2px",
              }
            }
          >
            1
          </div>
        </button>
      </div>
    </div>
  </div>
  <br />
  <div
    style={
      Object {
        "border": "solid 1px grey",
        "display": "inline-block",
        "padding": 5,
      }
    }
  >
    <button
      onClick={[Function]}
    >
      clone-child-btn1
      <div
        style={
          Object {
            "backgroundColor": "#f95",
            "borderRadius": "8px",
            "color": "white",
            "display": "inline-block",
            "float": "right",
            "fontSize": "8pt",
            "fontWeight": "bold",
            "padding": "1px 5px",
            "textAlign": "center",
            "top": "2px",
          }
        }
      >
        1
      </div>
    </button>
    <div
      style={
        Object {
          "border": "solid 1px grey",
          "display": "inline-block",
          "padding": 5,
        }
      }
    >
      <button
        onClick={[Function]}
      >
        clone-child-btn2
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
      </button>
      <div
        style={
          Object {
            "border": "solid 1px grey",
            "display": "inline-block",
            "padding": 5,
          }
        }
      >
        <button
          onClick={[Function]}
        >
          btn3
          <div
            style={
              Object {
                "backgroundColor": "#f95",
                "borderRadius": "8px",
                "color": "white",
                "display": "inline-block",
                "float": "right",
                "fontSize": "8pt",
                "fontWeight": "bold",
                "padding": "1px 5px",
                "textAlign": "center",
                "top": "2px",
              }
            }
          >
            1
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RenderCounter single-level 1`] = `
<div>
  <div
    style={
      Object {
        "border": "solid 1px grey",
        "display": "inline-block",
        "padding": 5,
      }
    }
  >
    <button
      onClick={[Function]}
    >
      btn1
      <div
        style={
          Object {
            "backgroundColor": "#f95",
            "borderRadius": "8px",
            "color": "white",
            "display": "inline-block",
            "float": "right",
            "fontSize": "8pt",
            "fontWeight": "bold",
            "padding": "1px 5px",
            "textAlign": "center",
            "top": "2px",
          }
        }
      >
        1
      </div>
    </button>
  </div>
  <br />
  <div
    style={
      Object {
        "border": "solid 1px grey",
        "display": "inline-block",
        "padding": 5,
      }
    }
  >
    <button
      onClick={[Function]}
    >
      btn2
      <div
        style={
          Object {
            "backgroundColor": "#f95",
            "borderRadius": "8px",
            "color": "white",
            "display": "inline-block",
            "float": "right",
            "fontSize": "8pt",
            "fontWeight": "bold",
            "padding": "1px 5px",
            "textAlign": "center",
            "top": "2px",
          }
        }
      >
        1
      </div>
    </button>
  </div>
  <br />
  <div
    style={
      Object {
        "border": "solid 1px grey",
        "display": "inline-block",
        "padding": 5,
      }
    }
  >
    <button
      onClick={[Function]}
    >
      btn3
      <div
        style={
          Object {
            "backgroundColor": "#f95",
            "borderRadius": "8px",
            "color": "white",
            "display": "inline-block",
            "float": "right",
            "fontSize": "8pt",
            "fontWeight": "bold",
            "padding": "1px 5px",
            "textAlign": "center",
            "top": "2px",
          }
        }
      >
        1
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<div
  style={
    Object {
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "margin": 15,
      "maxWidth": 600,
    }
  }
>
  <h1>
    Welcome to STORYBOOK
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've
     added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <a
      href="#/"
      onClick={[Function]}
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
    >
      stories
    </a>
     for a component called 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      RenderCounter
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     component located at 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/Button.js
    </code>
    .)
  </p>
  <p>
    This is just one thing you can do with Storybook.
    <br />
    Have a look at the 
    <a
      href="https://github.com/kadirahq/react-storybook"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      React Storybook
    </a>
     repo for more information.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</div>
`;
